// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders navigation bar (logged in) 1`] = `
<nav
  className="navbar navbar-expand-sm navbar-light bg-light sticky-top"
>
  <a
    className="navbar-brand"
    href="/"
    onClick={[Function]}
  >
    <img
      alt="MODQ Logo"
      height="50"
      src="logo.jpg"
      width="50"
    />
    MODQ
  </a>
  <button
    aria-controls="basic-navbar-nav"
    aria-label="Toggle navigation"
    className="navbar-toggler collapsed"
    onClick={[Function]}
    type="button"
  >
    <span
      className="navbar-toggler-icon"
    />
  </button>
  <div
    aria-expanded={null}
    className="navbar-collapse collapse"
  >
    <div
      className="mr-auto navbar-nav"
      onKeyDown={[Function]}
    >
      <a
        className="nav-link"
        href="/"
        onClick={[Function]}
      >
        Home
      </a>
      <a
        className="nav-link"
        href="/reviews/new"
        onClick={[Function]}
      >
        Create a Post
      </a>
      <a
        className="nav-link"
        href="/users/edit/"
        onClick={[Function]}
      >
        Edit Account Details
      </a>
      <a
        className="nav-link"
        href="/"
        onClick={[Function]}
      >
        Log Out
      </a>
    </div>
  </div>
</nav>
`;

exports[`renders navigation bar (not logged in) 1`] = `
<nav
  className="navbar navbar-expand-sm navbar-light bg-light sticky-top"
>
  <a
    className="navbar-brand"
    href="/"
    onClick={[Function]}
  >
    <img
      alt="MODQ Logo"
      height="50"
      src="logo.jpg"
      width="50"
    />
    MODQ
  </a>
  <button
    aria-controls="basic-navbar-nav"
    aria-label="Toggle navigation"
    className="navbar-toggler collapsed"
    onClick={[Function]}
    type="button"
  >
    <span
      className="navbar-toggler-icon"
    />
  </button>
  <div
    aria-expanded={null}
    className="navbar-collapse collapse"
  >
    <div
      className="mr-auto navbar-nav"
      onKeyDown={[Function]}
    >
      <a
        className="nav-link"
        href="/"
        onClick={[Function]}
      >
        Home
      </a>
      <a
        className="nav-link"
        href="/reviews/new"
        onClick={[Function]}
      >
        Create a Post
      </a>
      <a
        className="nav-link"
        href="/users/signup"
        onClick={[Function]}
      >
        Register
      </a>
      <a
        className="nav-link"
        href="/users/login"
        onClick={[Function]}
      >
        Log In
      </a>
    </div>
  </div>
</nav>
`;
